debug manager.php

--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 /**
         Author: SpringHack - springhack@live.cn
-        Last modified: 2015-09-20 11:14:42
-        Filename: common.css
+        Last modified: 2015-10-19 20:28:56
+        Filename: css/common.css
         Description: Created by SpringHack using vim automatically.
 **/
 body, div, img {
