Add theme manager, change default theme.

--- a/admin/css/frame.css
+++ b/admin/css/frame.css
@@ -1,3 +1,9 @@
+/**
+        Author: SpringHack - springhack@live.cn
+        Last modified: 2016-02-01 12:26:54
+        Filename: admin/css/frame.css
+        Description: Created by SpringHack using vim automatically.
+**/
 @charset "utf-8";
 /* CSS Document */
 
